# CMAKE-test-2

./: .gitignore  README.md
source/: CMakeLists.txt  main.cpp
source/src/LibMath/include/: math.h
source/src/LibMath/src/: math.cpp
source/src/LibStat/include/: stats.h
source/src/LibStat/src/: stats.cpp
